--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div id="noriu_greiciau">
         <h2>Nori sužinoti, kaip greičiau?</h2>
-        <p>Spustelk čia: <a id="link_to_next" href="#">Play</a></p>
+        <p>Spustelk čia: <a id="link_to_next" href="./skaiciuokle.html">Play</a></p>
     </div>
 
     <script>
