--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             document.getElementById('noriu_greiciau').style.display = 'block';
 
             const link = document.getElementById('link_to_next');
-            link.href = `trecias_psl.html?pradines_santaupos=${encodeURIComponent(pradineSuma)}&menesinis_atlyginimas=${encodeURIComponent(menesinisAtlyginimas)}&siekiama_suma=${encodeURIComponent(siekiamaSuma)}&pradine_trukme=${encodeURIComponent(menesiai)}`;
+            link.href = `skaiciuokle.html?pradines_santaupos=${encodeURIComponent(pradineSuma)}&menesinis_atlyginimas=${encodeURIComponent(menesinisAtlyginimas)}&siekiama_suma=${encodeURIComponent(siekiamaSuma)}&pradine_trukme=${encodeURIComponent(menesiai)}`;
         }
     </script>
 </body>
