--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             padding: 20px;
             background-color: #f4f4f9;
             color: #333;
+            min-height: 100vh;
         }
         input[type="text"], input[type="number"] {
             width: 100%;
@@ -64,7 +65,7 @@
 
     <div class="result fade-in" id="result"></div>
     <div class="booster-link fade-in" id="boosterLink"></div>
-
+    <footer>© 2024 DreamDone. All rights reserved.</footer>
     <script>
         function calculateDream() {
             const dreamPrice = parseFloat(document.getElementById('dreamPrice').value);
