--- a/booster.html
+++ b/booster.html
@@ -10,6 +10,7 @@
             padding: 20px;
             background-color: #f4f4f9;
             color: #333;
+            min-height: 100vh;
         }
         input[type="number"] {
             width: 100%;
@@ -76,7 +77,7 @@
     <button onclick="calculateBoost()">Go</button>
 
     <div class="result fade-in" id="boostResult"></div>
-    <footer>2024 DreamDone</footer>
+    <footer>© 2024 DreamDone. All rights reserved.</footer>
 
     <script>
         // Get values from localStorage
